[BE] CORS 설정 수정 (#249)
* fix: CORS 설정 수정

* fix: 오탈자 수정